extended and improved equipment and project form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,11 @@ body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
 }
 
+
+.ac {
+  align: center;
+}
+
 .navbar {
   margin-bottom: 0;
 }
