--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,36 +1,57 @@
-<%= form_for(@labor_item) do |form| %>
+<div class="card">
+  <div class="card-block">
+    <h1 class="card-title"> Edit equipment details </h1>
+      <%= form_for(@labor_item) do |f| %>
+        <div class="row inline-field ac">
+          <div class="form-group col-md-6">
+            <%= f.label :name %><br />
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
 
-    <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
-    </div>
+          <div class="form-group col-md-6">
+            <%= f.label :inv_nr, 'Inventory Number' %><br />
+            <%= f.text_field :inv_nr, autofocus: true, class: "form-control"  %>
+          </div>
+        </div>
+        <div class="row inline-field">
+          <div class="form-group col-md-3">
+            <%= f.label :quantity %>
+            <%= f.number_field :quantity, autocomplete: "off", class: "form-control"  %>
+          </div>
 
-    <div class="field">
-      <%= form.label :inv_nr %>
-      <%= form.text_field :inv_nr %>
-    </div>
+          <div class="form-group col-md-3">
+            <%= f.label :status  %><br />
+            <%= f.collection_select :equipment_status_id, EquipmentStatus.all,:id,:name, include_blank: true, autocomplete: "off", class: "form-control"  %>
+          </div>
 
-    <div class="field">
-      <%= form.label :quantity %>
-      <%= form.number_field :quantity %>
-    </div>
+          <div class="form-group col-md-4">
+            <%= f.label :category_id %><br />
+            <%= f.collection_select :category_id, Category.all,:id,:name, include_blank: true, autocomplete: "off", class: "form-control dropdown-toggle"  %>
+          </div>
 
-    <div class="field">
-      <%= form.label :category %>
-      <%= form.collection_select :category_id, Category.all,:id,:name, include_blank: true %>
-    </div>
+        </div>
+        <div class="row inline-field">
+          <div class="form-group col-md-12">
+            <%= f.label :description %>
+            <%= f.text_area :description, autocomplete: "off", class: "form-control"  %>
+          </div>
+        </div>
+        <div class="row inline-field">
+          <div class="form-group col-md-12">
+            <%= f.label :thumb_image %>
+            <%= f.text_area :thumb_image, autocomplete: "off", class: "form-control"  %>
+          </div>
+        </div>
+        <div class="row inline-field">
+          <div class="form-group col-md-12">
+            <%= f.label :main_image %>
+            <%= f.text_area :main_image, autocomplete: "off", class: "form-control"  %>
+          </div>
+        </div>
 
-    <div class="field">
-      <%= form.label :status %>
-      <%= form.collection_select :equipment_status_id, EquipmentStatus.all,:id,:name, include_blank: true %>
-    </div>
-
-    <div class="field">
-      <%= form.label :description %>
-      <%= form.text_area :description %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit %>
-    </div>
-<% end %>
+        <div class="actions">
+          <%= f.submit 'Update Equipment', class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+  </div>
+</div>
