--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,16 +1,34 @@
-<%= form_for(@project) do |form| %>
-
-    <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
+<div class="regist">
+  <div class="card">
+    <div class="card-block">
+      <div class="row col-md-12">
+        <div class="col-md-12">
+          <h1 class="card-title">Edit Project Details</h1>
+          <%= form_for(@project) do |form| %>
+            <div class="form-group">
+              <%= form.label :name %><br />
+              <%= form.text_field :name, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= form.label :description %><br />
+              <%= form.text_area :description, autofocus: true, class: "form-control"  %>
+            </div>
+            <div class="form-group">
+              <%= form.label :main_image %><br />
+              <%= form.text_area :main_image, autocomplete: "off", class: "form-control"  %>
+            </div>
+            <div class="form-group">
+              <%= form.label :thumb_image %><br />
+              <%= form.text_area :thumb_image, autocomplete: "off", class: "form-control"  %>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-group">
+              <%= form.submit "Update Project", class: "btn btn-primary btn-block"  %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-
-    <div class="field">
-      <%= form.label :description %>
-      <%= form.text_area :description %>
-    </div>
-
-    <div class="actions">
-      <%= form.submit %>
-    </div>
-<% end %>
+  </div>
+</div>
