--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= link_to "Add New Project", new_project_path if logged_in?(:labor_staff)  %>
 
-<%= render partial: 'project', collection: @projects %>
+<%= render @projects %>
