fixed project edit button

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -4,7 +4,7 @@
   <p class="home-card-text"><%= link_to project.name, project_show_path(project)  %></p>
   <p class="home-card-text"><%= project.description %></p>
   <% if logged_in?(:labor_staff) %> 
-    <button class="btn btn-default"><%= link_to "Edit", edit_project_path(project) %></button>
+    <button class="btn btn-primary"><%= link_to "Edit", edit_project_path(project) %></button>
     <button class="btn btn-danger"><%= link_to "Delete", project_path(project), method: :delete, data: { confirm: 'Are you sure?' } %></button>
   <% end %>
 </div>
