fixed equipment view side bar

--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -12,7 +12,7 @@
   <body>
 
         <!-- Start of side-bar -->
-    <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+    <nav class="hidden-xs-down bg-faded sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="/equipment">All Equipment <span class="sr-only">(current)</span></a>
@@ -38,16 +38,16 @@
       </ul>
       <%= form_tag equipment_index_path, :method => 'get' do %>
           <%= submit_tag 'Search by name', :name => nil , class: 'form-control btn btn-info' %>
-          <%= text_field_tag :search, params[:search], class: 'form-control mr-sm-2' %>
+          <%= text_field_tag :search, params[:search], class: 'form-control' %>
       <% end %>
       <br>
 
       <%= form_tag equipment_index_path, :method => 'get' do %>
           <%= submit_tag 'Filter by date', :name => nil , class: 'form-control btn btn-info' %>
           <%= label_tag 'pickup_date', 'From:' , class: 'mr-sm-2' %>
-          <%= text_field_tag :pickup_date, params[:pickup_date], class: 'form-control mr-sm-2', :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true'} %>
+          <%= text_field_tag :pickup_date, params[:pickup_date], class: 'form-control', :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true'} %>
           <%= label_tag 'return_date', 'To:' , class: 'mr-sm-2' %>
-          <%= text_field_tag :return_date, params[:return_date], class: 'form-control mr-sm-2', :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true'} %>
+          <%= text_field_tag :return_date, params[:return_date], class: 'form-control', :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true'} %>
       <% end %>
     </nav>
     <!-- End of side-bar -->
