improved home layout

--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -7,7 +7,7 @@
         <h3>Address</h3>
         <p>Finkenau 35, 22081 Hamburg</p>
         <h3>Phone</h3>
-        <p><%=  number_to_phone "0404040404" %></p>
+        <p><%=  number_to_phone "04040404XXX" %></p>
         <h3>Email</h3>
         <p>example@mylab.com</p>
     </div>
