--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,29 @@
               <%= f.email_field :email, autofocus: true, class: "form-control"  %>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :street %><br />
+              <%= f.text_field :street, class: "form-control" %>
+            </div>
+
+              <div class="form-group">
+              <%= f.label :postal_code %><br />
+              <%= f.text_field :postal_code, autofocus: true, class: "form-control"  %>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :city %><br />
+              <%= f.text_field :city, class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :matriculation_number %><br />
+              <%= f.text_field :matriculation_number, autofocus: true, class: "form-control"  %>
+            </div>
+          </div>
 
           <div class="col-md-6">
             <div class="form-group">
