added new fields in user profile edit form

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,30 @@
                 <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
               <% end %>
 
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :street %><br />
+                  <%= f.text_field :street, class: "form-control" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :postal_code %><br />
+                  <%= f.text_field :postal_code, autofocus: true, class: "form-control"  %>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :city %><br />
+                  <%= f.text_field :city, class: "form-control" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :matriculation_number %><br />
+                  <%= f.text_field :matriculation_number, autofocus: true, class: "form-control"  %>
+                </div>
+              </div>
+
               <div class="form-group">
                 <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
                 <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
