--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -18,11 +18,11 @@
     <div class="col-md-6">
       <div class="form-group">
         <%= form.label :pickup_date %>
-        <%= form.text_field :pickup_date, class: "form-control", :data => {:provide => "datepicker"} %>
+        <%= form.text_field :pickup_date, class: "form-control", :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true'} %>
       </div>
       <div class="form-group">
         <%= form.label :return_date %>
-        <%= form.text_field :return_date, class: "form-control date-field", :data => {:provide => "datepicker"} %>
+        <%= form.text_field :return_date, class: "form-control", :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true'} %>
       </div>
     </div>
     <div class="col-md-10"></div>
