--- a/app/views/equipment/_equipment_view.html.erb
+++ b/app/views/equipment/_equipment_view.html.erb
@@ -5,7 +5,7 @@
 <%= link_to "Add New Equipment", new_equipment_path, class: "btn btn-secondary add-new" if logged_in?(:labor_staff) %>
 
 <div class="row equipment-container">
-  <%= render partial: 'labor_item', collection: @available_items, booking_item: @booking_item %>
+  <%= render partial: 'labor_item', collection: @labor_items, booking_item: @booking_item %>
 </div>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
