--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -16,7 +16,7 @@
       <%= form_for booking_item do |f| %>
         <div class="row">
           <div class="col-md-3">
-            <%= f.number_field :quantity, value: booking_item.quantity.to_i, class: "form-control", min: 1 %>
+            <%= f.number_field :quantity, value: booking_item.quantity.to_i, class: "form-control", min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date])  %>
             <%= f.hidden_field :equipment_id, value: labor_item.id %>
           </div>
           <div class="col-md-3">
