--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,5 +1,5 @@
 
-      <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+      <nav class="navbar">
         <h4 class="mylab"><%= link_to "MyLab", root_path %></h4>
         <nav class="nav nav-masthead">
           <%= link_to "Home", root_path, class: 'nav-link' %>
