--- a/app/views/shared/_admin_application_nav.html.erb
+++ b/app/views/shared/_admin_application_nav.html.erb
@@ -1,17 +1,19 @@
 
-      <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-        <h4 class="mylab"><%= link_to "MyLab", root_path %></h4>
-        <nav class="nav nav-masthead">
-        <%= link_to "Home", root_path, class: 'nav-link' %>
-        <%= link_to "About", about_path, class: 'nav-link' %>
-        <%= link_to "Contact", contact_path, class: 'nav-link' %>
-        <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
-        <%= link_to "Projects", projects_path, class: 'nav-link' %>
-        <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' %>
-        <%= link_to "Admin Board", admin_board_path, class: 'nav-link'%>
-        <%= login_helper 'nav-link'  %>
-        </nav>
-    </nav>
- 
+<nav class="navbar navbar-toggleable-md navbar-inverse navbar-fixed-top bg-inverse">
 
-    
+  <h4 class="mylab"><%= link_to "MyLab", root_path %></h4>
+  <nav class="nav nav-masthead">
+    <div class="container">
+      <%= link_to "Home", root_path, class: 'nav-link' %>
+      <%= link_to "About", about_path, class: 'nav-link' %>
+      <%= link_to "Contact", contact_path, class: 'nav-link' %>
+      <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
+      <%= link_to "Projects", projects_path, class: 'nav-link' %>
+      <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' %>
+      <%= link_to "Admin Board", admin_board_path, class: 'nav-link'%>
+      <%= login_helper 'nav-link'  %>
+    </div>
+  </nav>
+</nav>
+
+
