--- a/app/views/equipment/audio.html.erb
+++ b/app/views/equipment/audio.html.erb
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= @page_title %></title>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'equipment', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
 
         <!-- Start of side-bar -->
-    <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+    <nav class="sidebar bg-dark">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link" href="/equipment">All Equipment</a>
@@ -51,7 +39,4 @@
       <% end %>
     </nav>
     <!-- End of side-bar -->
-        <%= render 'equipment_view' %>
-
-  </body>
-</html>
+    <%= render 'equipment_view' %>
