--- a/app/views/equipment/measure.html.erb
+++ b/app/views/equipment/measure.html.erb
@@ -1,7 +1,7 @@
 
 
         <!-- Start of side-bar -->
-    <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+    <nav class="sidebar bg-dark">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link" href="/equipment">All Equipment </a>
