--- a/app/views/equipment/_equipment_view.html.erb
+++ b/app/views/equipment/_equipment_view.html.erb
@@ -4,7 +4,7 @@
   <%= link_to "Login", new_user_session_path, class: "btn btn-success" if current_user.is_a?(GuestUser) %>
   <%= link_to "Add New Equipment", new_equipment_path, class: "btn btn-secondary add-new" if logged_in?(:labor_staff) %>
 
-  <div class="row equipment-container">
+  <div class="container equipment-container card-columns">
     <%= render partial: 'labor_item', collection: @labor_items, booking_item: @booking_item %>
   </div>
 </div>
