--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+<nav class="navbar bg-dark navbar-expand-lg top-bar fixed">
   <a class="navbar-brand" href="/">Mylab</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-          <%= link_to "Home", root_path, class: 'nav-link' %>
+    <ul class="navbar-nav mr-auto">
+      <li class="navbar-item">
+        <%= link_to "Home", root_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
           <%= link_to "About", about_path, class: 'nav-link' %>
@@ -29,7 +29,7 @@
       </li>
     </ul>
 
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="navbar-nav mr-auto">
         <%= login_helper %>
     </ul>
   </div>
