--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -29,7 +29,7 @@
       </li>
     </ul>
 
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav navbar-right">
         <%= login_helper %>
     </ul>
   </div>
