--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,5 +1,5 @@
   <!-- Start of side-bar -->
-  <nav class="sidebar bg-dark">
+  <nav class="sidebar">
     <ul class="nav nav-pills flex-column ">
       <li class="nav-item">
         <a class="nav-link active" href="/equipment">All Equipment <span class="sr-only">(current)</span></a>
