--- a/app/views/equipment/misc.html.erb
+++ b/app/views/equipment/misc.html.erb
@@ -1,6 +1,6 @@
 
         <!-- Start of side-bar -->
-    <nav class="sidebar bg-dark">
+    <nav class="sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link" href="/equipment">All Equipment</a>
