Updated views for Bootstrap 4 (Gemfile has changed!)

--- a/app/views/layouts/_list_text.html.erb
+++ b/app/views/layouts/_list_text.html.erb
@@ -1,2 +1,3 @@
-<h3 class="listtext">Items in Equipment List </h3>
-<hr>
+<div class="container ml-content">
+	<h2 class="listtext">Items in Equipment List </h2>
+</div>
