--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,5 +1,6 @@
-
-<div class="container about">
-    <h1 class="jumbotron-heading">About</h1>
-    <p class="lead text-muted">My favorite laboratory where I can find the equipments I need for my projects.</p>
-</div>
+<section class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">About</h1>
+    <p class="lead">My favorite laboratory where I can find the equipments I need for my projects.</p>
+  </div>
+</section>
