--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -1,5 +1,10 @@
-<h1 class="about">Contact</h1>
-<hr>
+<section class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Contact</h1>
+    <p class="lead">Have any questions? We are here to help you!</p>
+  </div>
+</section>
+
 <div class="row">
     <div class="col-md-2">
     </div>
