--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,16 +1,21 @@
-<div class="regist">
-  <div class="card">
-    <div class="card-block">
-      <div class="row">
-        <div class="col-md-7">
-          <h3 class="card-title">Edit <%= resource_name.to_s.humanize %></h3>
+<div class="container ml-content">
+  <div class="row justify-content-md-center">
+    <div class="col-xs-12 col-md-10 col-xl-8 mt-5 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Edit <%= resource_name.to_s.humanize %></h2>
+
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-              <%= devise_error_messages! %>
-              <div class="form-group">
+            <%= devise_error_messages! %>
+
+            <div class="form-row">
+
+              <div class="form-group col-xs-12 col-md-6">
                 <%= f.label :name %><br />
                 <%= f.text_field :name, class: "form-control" %>
               </div>
-              <div class="form-group">
+
+              <div class="form-group col-xs-12 col-md-6">
                 <%= f.label :email %><br />
                 <%= f.email_field :email, autofocus: true, class: "form-control"  %>
               </div>
@@ -19,62 +24,78 @@
                 <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
               <% end %>
 
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :street %><br />
-                  <%= f.text_field :street, class: "form-control" %>
-                </div>
-
-                <div class="form-group">
-                  <%= f.label :postal_code %><br />
-                  <%= f.text_field :postal_code, autofocus: true, class: "form-control"  %>
-                </div>
+              <div class="form-group col-xs-12 col-md-5">
+                <%= f.label :street %><br />
+                <%= f.text_field :street, class: "form-control" %>
               </div>
 
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :city %><br />
-                  <%= f.text_field :city, class: "form-control" %>
-                </div>
-
-                <div class="form-group">
-                  <%= f.label :matriculation_number %><br />
-                  <%= f.text_field :matriculation_number, autofocus: true, class: "form-control"  %>
-                </div>
+              <div class="form-group col-xs-12 col-md-3">
+                <%= f.label :postal_code %><br />
+                <%= f.text_field :postal_code, autofocus: true, class: "form-control"  %>
               </div>
 
-              <div class="form-group">
-                <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+              <div class="form-group col-xs-12 col-md-4">
+                <%= f.label :city %><br />
+                <%= f.text_field :city, class: "form-control" %>
+              </div>
+
+              <div class="form-group col">
+                <%= f.label :matriculation_number %><br />
+                <%= f.text_field :matriculation_number, autofocus: true, class: "form-control"  %>
+              </div>
+
+            </div>
+
+            <hr>
+
+            <div class="form-row">
+
+              <div class="form-group col-xs-12 col-md-6">
+                <%= f.label :password %>
                 <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
-                <% if @minimum_password_length %>
-                  <br />
-                  <em><%= @minimum_password_length %> characters minimum</em>
-                <% end %>
+                <small class="form-text text-muted">
+                  <% if @minimum_password_length %>
+                    <%= @minimum_password_length %> characters minimum.
+                  <% end %>
+                  Leave blank if you don't want to change it.
+                </small>
               </div>
 
-              <div class="form-group">
+              <div class="form-group col-xs-12 col-md-6">
                 <%= f.label :password_confirmation %><br />
                 <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
               </div>
 
-              <div class="form-group">
-                <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+            </div>
+
+            <hr>
+
+            <div class="form-row">
+
+              <div class="form-group col-xs-12 col-md-6">
+                <%= f.label :current_password %>
                 <%= f.password_field :current_password, autocomplete: "off", class: "form-control"  %>
+                <small class="form-text text-muted">
+                  We need your current password to confirm your changes.
+                </small>
               </div>
 
-              <div class="form-group">
-                <%= f.submit "Update", class: "btn btn-primary btn-block"  %>
-              </div>
-            <% end %>
-        </div>
-        <div class="col-md-5">
+            </div>
+
+            <%= f.submit "Update", class: "btn btn-primary"  %>
+
+          <% end %>
+
+          <hr>
+
           <h3>Cancel my account</h3>
           <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger"   %></p>
-        </div>
-      </div>
 
-      <div class="auth-links">
-        <%= link_to "Back", :back %>
+          <div class="auth-links">
+            <%= link_to "Back", :back %>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
