--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,73 +1,76 @@
-<div class="regist">
-  <div class="card">
-    <div class="card-block">
-      <h3 class="card-title">Sign up </h3>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :name %><br />
-              <%= f.text_field :name, class: "form-control" %>
+<div class="container ml-content">
+  <div class="row justify-content-md-center">
+    <div class="col-xs-12 col-md-10 col-xl-8 mt-5">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Sign up </h2>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :name %><br />
+                  <%= f.text_field :name, class: "form-control" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :email %><br />
+                  <%= f.email_field :email, autofocus: true, class: "form-control"  %>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :street %><br />
+                  <%= f.text_field :street, class: "form-control" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :postal_code %><br />
+                  <%= f.text_field :postal_code, autofocus: true, class: "form-control"  %>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :city %><br />
+                  <%= f.text_field :city, class: "form-control" %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :matriculation_number %><br />
+                  <%= f.text_field :matriculation_number, autofocus: true, class: "form-control"  %>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <%= f.label :password %>
+                  <% if @minimum_password_length %>
+                    <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
+                </div>
+              </div>
+
+              <div class="col-md-2">
+                <div class="form-group">
+                  <%= f.submit "Sign up", class: "btn btn-primary btn-block"   %>
+                </div>
+                <div class="auth-links">
+                  <%= render "devise/shared/links" %>
+                </div>
+              </div>
             </div>
 
-            <div class="form-group">
-              <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, class: "form-control"  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :street %><br />
-              <%= f.text_field :street, class: "form-control" %>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :postal_code %><br />
-              <%= f.text_field :postal_code, autofocus: true, class: "form-control"  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :city %><br />
-              <%= f.text_field :city, class: "form-control" %>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :matriculation_number %><br />
-              <%= f.text_field :matriculation_number, autofocus: true, class: "form-control"  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :password %>
-              <% if @minimum_password_length %>
-                <em>(<%= @minimum_password_length %> characters minimum)</em>
-              <% end %><br />
-              <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
-            </div>
-          </div>
-
-          <div class="col-md-10"></div>
-          <div class="col-md-2">
-            <div class="form-group">
-              <%= f.submit "Sign up", class: "btn btn-primary btn-block"   %>
-            </div>
-            <div class="auth-links register-text">
-              <%= render "devise/shared/links" %>
-            </div>
-          </div>
+          <% end %>
         </div>
-
-      <% end %>
+      </div>
     </div>
   </div>
 </div>
