--- a/app/views/equipment/_labor_item.html.erb
+++ b/app/views/equipment/_labor_item.html.erb
@@ -1,18 +1,29 @@
-
-<div class="home-card">
-  <%= image_tag labor_item.thumb_image unless labor_item.thumb_image.nil? %>
-  <p class="home-card-text"><%= link_to (labor_item.name + " - " +(labor_item.inv_nr).to_s), equipment_show_path(labor_item)  %></p>
-  <p class="home-card-text"><%= labor_item.description %></p>
-  <td><%= "Total supply: " + labor_item.quantity.to_s %></td>
-  <td><%= "Available: " + labor_item.available_quantity(params[:pickup_date], params[:return_date]).to_s %></td>
-  <% if logged_in?(:labor_staff) %>
-    <button class="btn btn-primary"><%= link_to "Edit", edit_equipment_path(labor_item) %></button>
-    <button class="btn btn-danger"><%= link_to "Delete", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure?' } %></button>
-  <% else %>
-    <%= form_for @booking_item, remote: true do |f| %>
-      <%= f.number_field :quantity, value: 1, min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date]) %>
-      <%= f.hidden_field :labor_item_id, value: labor_item.id if logged_in?(:user) %>
-      <%= f.submit "Add to List", class: "btn btn-primary" if logged_in?(:user) %>
-    <% end %>
-  <% end %>
+<div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 mb-4">
+  <div class="card h-100">
+    <%= image_tag labor_item.thumb_image, class: "card-img-top" unless labor_item.thumb_image.nil? %>
+    <div class="card-body">
+      <h4 class="card-title"><%= link_to (labor_item.name + " - " +(labor_item.inv_nr).to_s), equipment_show_path(labor_item)  %></h4>
+      <p class="card-text"><%= labor_item.description %></p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><%= "Total supply: " + labor_item.quantity.to_s %></li>
+      <li class="list-group-item"><%= "Available: " + labor_item.available_quantity(params[:pickup_date], params[:return_date]).to_s %></li>
+    </ul>
+    <div class="card-body">
+      <% if logged_in?(:labor_staff) %>
+        <button class="btn btn-primary"><%= link_to "Edit", edit_equipment_path(labor_item) %></button>
+        <button class="btn btn-danger"><%= link_to "Delete", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure?' } %></button>
+      <% else %>
+        <%= form_for @booking_item, remote: true do |f| %>
+          <div class="input-group">
+            <%= f.number_field :quantity, value: 1, min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date]), class: "form-control" %>
+            <%= f.hidden_field :labor_item_id, value: labor_item.id if logged_in?(:user) %>
+            <span class="input-group-btn">
+              <%= f.submit "Add to List", class: "btn btn-primary" if logged_in?(:user) %>
+            </span>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
