--- a/app/views/list/_equipment_list.html.erb
+++ b/app/views/list/_equipment_list.html.erb
@@ -13,9 +13,15 @@
   </p>
   <%= link_to "To Equipment", equipment_index_path, class: "btn btn-info" %>
 <% else %>
-  <% @booking_items.each do |booking_item| %>
+
+  <table class="table">
+    <tbody>
+      <% @booking_items.each do |booking_item| %>
         <%= render 'list/list_row', booking_item: booking_item, labor_item: booking_item.equipment %>
-  <% end %>
+      <% end %>
+    </tbody>
+  </table>
+
   <div class="btn-group">
     <%= link_to "To Booking", booklist_path, class: "btn btn-success" %>
   </div>
