--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-  <a class="navbar-brand" href="/">Mylab</a>
+<nav class="navbar fixed-top navbar-dark bg-primary navbar-expand-lg ml-navbar">
+  <%= link_to "MyLab", root_path, class: 'navbar-brand mylab' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -27,10 +28,7 @@
           <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) %>
           <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' if logged_in?(:labor_staff) %>
       </li>
-    </ul>
-
-    <ul class="nav navbar-nav navbar-right">
-        <%= login_helper %>
+      <%= login_helper %>
     </ul>
   </div>
 </nav>
