fixed minor bug at favorite items

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -62,6 +62,7 @@
               <p class="card-text"><%= fav_item.description %></p>
             </div>
           </div>
+        </div>
         <% end %>
       </div>
     </div>
