--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,53 @@
 .ml-img-list {
   height: 4rem;
 }
+
+
+/*
+ * FOR Tooltip
+ */
+
+.tooltip-toggle {
+  cursor: pointer;
+  position: relative;
+
+  svg {
+    height: 18px;
+    width: 18px;
+  }
+
+  //Tooltip text container
+  &::before {
+    position: absolute;
+    top: 40px;
+    left: -10px;
+    background-color: #2B222A;
+    border-radius: 5px;
+    color: #fff;
+    content: attr(aria-label); //This pulls in the text from the element with the tooltip
+    padding: 0.1rem;
+    text-transform: none;
+    transition: all 0.5s ease;
+    width: 200px;
+  }
+
+  //Setting up the transition
+  &::before,
+  &::after {
+    color: #efefef;
+    font-family: monospace;
+    font-size: 12px;
+    opacity: 0;
+    pointer-events: none;
+    text-align: center;
+  }
+
+  //Triggering the transition
+  &:focus::before,
+  &:focus::after,
+  &:hover::before,
+  &:hover::after {
+    opacity: 1;
+    transition: all 0.75s ease;
+  }
+}
