--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,29 +1,53 @@
-<h3 class="listtext">Show Project Details</h3>
-<%= image_tag @project.main_image %>
+<div class="container ml-content pt-4">
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
 
-<h1><%= @project.name %></h1>
-<p><%= @project.description %></p>
+        <div class="row">
 
-<%= link_to 'Edit', edit_project_path(@project), class: "btn btn-secondary" if logged_in?(:labor_staff) %>
-<%= link_to 'Back', projects_path, class: "btn btn-info" %>
+          <div class="col-xs-12 col-md-6">
+            <%= image_tag @project.main_image, class: "img-fluid" %>
+          </div>
 
-<div class="row ml">
-  <% if @usually_booked_items.size == 0  %>
-      <div class="headline">No equipment has been booked for this project. Be the first?</div>
-      <%= link_to "To Equipment", equipment_index_path, class: "btn btn-info ml" %>
-  <% else %>
-      <div class="headline">Student who choose this project usually book:</div>
-  <% end %>
-</div>
+          <div class="col-xs-12 col-md-6">
+            <div class="card-body">
+              <h2 class="card-title"><%= @project.name %></h2>
+              <p class="card-text"><%= @project.description %></p>
+              <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-secondary" if logged_in?(:labor_staff) %>
+              <%= link_to 'Back', projects_path, class: "btn btn-primary" %>
+            </div>
+          </div>
+        </div>
 
-<div class="row ml">
-  <% @usually_booked_items.each do |usually_booked_item| %>
-      <div class="home-card">
-        <%= image_tag usually_booked_item.thumb_image unless usually_booked_item.thumb_image.nil? %>
-        <p class="home-card-text"><%= link_to usually_booked_item.name, equipment_path(usually_booked_item)  %></p>
-        <p class="home-card-text"><%= usually_booked_item.description %></p>
+        <div class="row">
+          <div class="col-12">
+            <div class="card-body">
+              <% if @usually_booked_items.size == 0  %>
+                  <p class="card-text">No equipment has been booked for this project. Be the first?</p>
+                  <%= link_to "To Equipment", equipment_index_path, class: "btn btn-primary ml" %>
+              <% else %>
+                  <p class="card-text">Student who choose this project usually book:</p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <% @usually_booked_items.each do |usually_booked_item| %>
+          <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 mb-4">
+            <div class="card h-100">
+              <%= image_tag usually_booked_item.thumb_image, class: "card-img-top" unless usually_booked_item.thumb_image.nil? %>
+              <div class="card-body">
+                <h6 class="card-title"><%= link_to usually_booked_item.name, equipment_path(usually_booked_item)  %></h6>
+                <p class="card-text"><%= usually_booked_item.description %></p>
+              </div>
+            </div>
+          <% end %>
+        </div>
+
       </div>
-  <% end %>
+    </div>
+  </div>
 </div>
 
 
