--- a/app/views/shared/_admin_application_nav.html.erb
+++ b/app/views/shared/_admin_application_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-dark bg-primary navbar-expand-lg ml-navbar">
+<nav class="navbar fixed-top navbar-dark bg-primary navbar-expand-md ml-navbar">
     <%= link_to "MyLab", root_path, class: 'navbar-brand mylab' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
