Removed all unused stylesheets, changed alerts and notices to be displayed as "fixed"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,15 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 
+/*
+ * Alerts and Notices
+ */
+
+.alert, .notice {
+  position: fixed;
+  z-index: 999999999;
+}
+
 
 /*
  * Navbar
