Removed all unnasassary Layout-Files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,12 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <% if logged_in?(:labor_staff) %>
       <%= render "shared/admin_application_nav"%>
     <% else%>
