can create new booking with calendar

--- a/app/views/admin_board/show.html.erb
+++ b/app/views/admin_board/show.html.erb
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="Dashboard">
-  <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
-
-</head>
-
-<body>
-  <!-- **********************************************************************************************************************************************************
-       MAIN CONTENT
-       *********************************************************************************************************************************************************** -->
-  <!--main content start-->
-  <section id="main-content">
-    <section class="wrapper">
-      <h3><i class="fa fa-angle-right"></i> Calendar</h3>
-      <!-- page start-->
-      <div class="row mt">
-        <aside class="col-md-2 mt">
-        </aside>
-        <aside class="col-md-9 mt">
-          <section class="panel">
-            <div class="panel-body">
-              <div id="calendar" class="has-toolbar"></div>
-            </div>
-          </section>
-        </aside>
-      </div>
-      <!-- page end-->
-    </section><! --/wrapper -->
-  </section><!-- /MAIN CONTENT -->
-
-<!--main content end-->
-<script>
-    $('#calendar').fullCalendar();
-</script>
-
-
-</body>
-</html>
+<h1>Admin Board</h1>
